# kiwi-rs

./: Cargo.toml  Makefile
src/: lib.rs
src/core/: client.rs  command.rs  config.rs  mod.rs  resp.rs
src/kstd/: Cargo.toml
src/server/: Readme.md  client.rs  command.rs  mod.rs  protocol.rs  storage.rs
src/storage/: Cargo.toml
