[package]
name = "kiwi-rs"
version = "0.1.0"
description = "An enhanced Redis server implemented in Rust"
readme = "README.md"
repository = "https://github.com/arana-db/kiwi-rs"
edition = "2024"

[workspace]

[dependencies]
redis-protocol = "6.0.0"
rocksdb = "0.23.0"
log = "0.4"
bytes = "1"
chrono = "0.4.40"
thiserror = "1.0"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }